--- a/part4.html
+++ b/part4.html
@@ -28,17 +28,17 @@
 
                 <li>
 
-                    <a href="index.html"><h4>Part 1: The Photo</h4></a></li>
+                    <a href="index.html"><h4>Part 1: Messaging</h4></a></li>
                 <li>
                     <a href="part2.html"><h4>Part 2: The Bio</h4></a></li>
 
                 <li>
 
                     <li>
-                        <a href="part3.html"><h4>Part 3: Messaging</h4></a></li>
+                        <a href="part3.html"><h4>Part 3: The Photo</h4></a></li>
 
                     <li>
-                        <a href="part4.html"><h4>Part 4: Templates</h4></a></li>
+                        <a href="part4.html"><h4>Part 4: Strategy</h4></a></li>
 
 
 
@@ -58,7 +58,11 @@
         </nav>
     </header>
     <main>
+        <aside id="photos">
+            <img src="img/8.png">
+            <img src="img/9.png">
 
+        </aside>
 
         <article id="messeging">
 
