--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
         <aside id="photos">
-            <embed src="img/tindernumbers3.pdf" max-width="100%" height="900px">
+            <embed src="img/tindernumbers3.pdf" height="13500px" max-width="100%" height="900px">
         </aside>
 
         <article id="messeging">
