--- a/part4.html
+++ b/part4.html
@@ -22,7 +22,7 @@
         <h1> <a href="index.html">Juan Matias</a></h1>
         <p><span class="caption">Tinder Documentation</span></p>
 
-        <nav>
+        <nav class="nav1">
 
             <ul>
 
@@ -42,16 +42,79 @@
 
 
 
-
                     <hr>
-                    <li>
-                        <a data-scroll href="#introduction">The First Message: Introduction</a></li>
-                    <li>
-                        <a data-scroll href="#swipping">Swiping</a></li>
-                    <li>
-                        <a data-scroll href="#scripted">Scripted conversation</a></li>
-                    <li>
-                        <a data-scroll href="#plus">Tinder plus</a></li>
+
+
+
+
+
+
+
+            </ul>
+        </nav>
+        <nav class="nav2">
+
+            <ul>
+
+
+
+
+
+                <li>
+
+                    <a data-scroll href="#introduction">The First Message: Introduction</a></li>
+                <li>
+                    <a data-scroll href="#science">The First Message: The Science Behind It</a></li>
+                <li>
+                    <a data-scroll href="#nottodo">The First Message: What Not To do</a></li>
+                <li>
+                    <a data-scroll href="#panic">The First Message: The Panic Opener</a></li>
+                <li>
+                    <a data-scroll href="#question">The First Message: The Question</a></li>
+
+
+                <li>
+                    <a data-scroll href="#statement">The First Message: The Statement</a></li>
+                <li>
+                    <a data-scroll href="#personal">The First Message: The Personal Message</a></li>
+                <li>
+                    <a data-scroll href="#pickup">The First Message: The Pickup Line</a></li>
+                <li>
+                    <a data-scroll href="#structure">Structure of the Conversation</a></li>
+                <li>
+                    <a data-scroll href="#blueprint">The Blueprint (Calibration)</a></li>
+                <li>
+                    <a data-scroll href="#narrative">The Narrative</a></li>
+
+
+                <li>
+                    <a data-scroll href="#emotion">The Narrative: Eliciting Emotion Through Validation</a></li>
+
+                <li>
+                    <a data-scroll href="#humor">The Narrative: Humor Within The Conversation</a></li>
+                <li>
+                    <a data-scroll href="#logistics">The Narrative: Logistics Within The Conversation</a></li>
+                <li>
+                    <a data-scroll href="#roleplay">The Narrative: Role-Play</a></li>
+                <li>
+                    <a data-scroll href="#shittest">The Narrative: Shit Test</a></li>
+
+
+
+                <li>
+                    <a data-scroll href="#variations">The Narrative: Shit Test Variations</a></li>
+                <li>
+                    <a data-scroll href="#proper">The Narrative: Using Proper language</a></li>
+                <li>
+                    <a data-scroll href="#closing">The Narrative: Closing</a></li>
+
+
+
+
+
+
+
+
 
 
             </ul>
